--- a/front-end/src/app/features/home-module/home-page/home-page.component.css
+++ b/front-end/src/app/features/home-module/home-page/home-page.component.css
@@ -7,6 +7,11 @@
     /* align-items: center; */
 }
 
+/* .sideNav {
+    width: 300px;
+    background-color: aqua;
+} */
+
 /* .main {
     display: flex;
     align-items: center;
