--- a/front-end/src/app/features/home-module/home-page/home-page.component.html
+++ b/front-end/src/app/features/home-module/home-page/home-page.component.html
@@ -1,4 +1,4 @@
 <div class="home">
-    <app-nav-bar></app-nav-bar>
+    <app-nav-bar class="sideNav"></app-nav-bar>
     <router-outlet class="main" name="primary"></router-outlet>
 </div>
