--- a/front-end/src/app/features/auth-module/login/login.component.html
+++ b/front-end/src/app/features/auth-module/login/login.component.html
@@ -12,7 +12,7 @@
 
             <div class="form" style="text-align: center; height: 100px;">
                 <form class="d-flex flex-column justify-content-between" style="height: 80px;" #loginForm="ngForm">
-                    <input type="text" placeholder="Phone Number or Username" required name="phoneorusername" ngModel>
+                    <input type="email" placeholder="Email or Username" required name="userEmail" ngModel>
                     <input type="password" placeholder="Password" required name="password" ngModel>
                 </form>
             </div>
