--- a/front-end/src/app/shared/notification/notification.component.css
+++ b/front-end/src/app/shared/notification/notification.component.css
@@ -1,3 +1,46 @@
 main {
-    margin-top: 50px;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.notification {
+    border-bottom: 1px solid #ddd;
+    padding: 10px 0;
+}
+
+.notification img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+    float: left;
+}
+
+.notification-content {
+    overflow: hidden;
+}
+
+.buttons button {
+    background-color: rgb(234, 234, 234);
+    border: none;
+    border-radius: 5px;
+    padding: 2px 10px;
+}
+
+.buttons button:hover {
+    background-color: rgb(200, 200, 200);
+}
+
+@media screen and (max-width: 600px) {
+    .notification img {
+        width: 40px;
+        height: 40px;
+    }
 }
