--- a/front-end/src/app/features/auth-module/login/login.component.html
+++ b/front-end/src/app/features/auth-module/login/login.component.html
@@ -1,9 +1,9 @@
-<main style="padding: 120px;" class=" container d-flex flex-row justify-content-between">
-    <section class="container" style="margin-left: 140px;">
+<main style="padding: 120px;" class=" container d-flex flex-row align-items-center ">
+    <!-- <section class="container" style="margin-left: 140px;">
         <div>
-            <h1>picture</h1>
+            <img src="../../../../assets/photo-1633886897663-44c707d71904.jpg" alt="">
         </div>
-    </section>
+    </section> -->
     <section class="container d-flex flex-column align-items-center">
         <div class="main">
             <div class="main-heading my-4">
@@ -30,11 +30,11 @@
                 <small style="font-size: 14px;">&nbsp;&nbsp;OR&nbsp;&nbsp;</small>
                 <div class="left"></div>
             </div>
-            <div class="fb-link mt-4 mb-4">
+            <!-- <div class="fb-link mt-4 mb-4">
                 <a href="" class="d-flex align-items-center justify-content-center"
                     style="font-size: 14px; font-weight: bold; color: rgb(112, 112, 255);"><img style="width: 7%;"
                         src="../../../../assets/auth/124010.webp" alt="">&nbsp;&nbsp;Log in with Facebook</a>
-            </div>
+            </div> -->
             <!-- <div class="forgot-password">
                 <a href="" style="color: grey; font-size: 13px;">Forgot Password?</a>
             </div> -->
@@ -44,9 +44,9 @@
             <button (click)="signup()" style="border: none; background-color: white;"><span style="color: black;">Don't
                     have an account?</span><span style="color: blue;">Sign up</span></button>
         </div>
-        <div>
+        <!-- <div>
             <app-get-app></app-get-app>
-        </div>
+        </div> -->
     </section>
 </main>
 <app-footer class="container"></app-footer>
