--- a/front-end/src/app/features/auth-module/signup/signup.component.html
+++ b/front-end/src/app/features/auth-module/signup/signup.component.html
@@ -47,9 +47,9 @@
             <button (click)="login()" style="border: none; background-color: white;"><span style="color: black;">Already
                     have an account?</span><span style="color: blue;">Log in</span></button>
         </div>
-        <div style="margin-left: 170px; ">
+        <!-- <div style="margin-left: 170px; ">
             <app-get-app></app-get-app>
-        </div>
+        </div> -->
     </section>
 
     <!-- DOB -->
