--- a/front-end/src/app/features/home-module/other-user/other-user-profile/other-user-profile.component.html
+++ b/front-end/src/app/features/home-module/other-user/other-user-profile/other-user-profile.component.html
@@ -27,12 +27,11 @@
             <span class="posts"></span>
             POST
         </a>
-        <button class="mx-5">
+        <!-- <button class="mx-5">
             <span class="saved"></span>
             SAVED
-        </button>
+        </button> -->
     </div>
     <app-all-posts [userIds]="userId"></app-all-posts>
-    <!-- <router-outlet name="userPosts"></router-outlet> -->
 </main>
 <app-footer class="container"></app-footer>
