--- a/front-end/src/app/features/home-module/home-page/home-page.component.css
+++ b/front-end/src/app/features/home-module/home-page/home-page.component.css
@@ -1,21 +1,25 @@
 .home {
     display: flex;
     width: 100%;
+    height: 100vh;
     flex-direction: row;
     /* background-color: lightblue; */
     justify-content: center;
     /* align-items: center; */
 }
-
-/* .sideNav {
-    width: 300px;
-    background-color: aqua;
-} */
-
-/* .main {
-    display: flex;
-    align-items: center;
-    jus
+.sideNav {
+    display: inline-block;
     background-color: lightblue;
-    width: 100%;
-} */
+    
+}
+.bottomNav {
+    visibility: hidden;
+}
+
+@media (max-width: 990px) {
+    
+    .bottomNav {
+        visibility: visible;
+        background-color: aqua;
+    }
+}
