--- a/front-end/src/app/features/home-module/other-user/other-user-profile/other-user-profile.component.css
+++ b/front-end/src/app/features/home-module/other-user/other-user-profile/other-user-profile.component.css
@@ -37,7 +37,7 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 300px;
+    max-width: 300px;
 }
 
     .userDetails button {
@@ -54,7 +54,7 @@ a {
 .user-values,
 .user-status,
 .user-bio {
-    width: 280px;
+    min-width: 280px;
 }
 
 .userThings {
