--- a/front-end/src/app/features/home-module/user-profile/profile/profile.component.css
+++ b/front-end/src/app/features/home-module/user-profile/profile/profile.component.css
@@ -2,7 +2,10 @@ main {
     font-family: "Roboto", sans-serif;
     font-weight: 300;
     font-style: normal;
-    width: 900px;
+    max-width: 900px;
+    display: flex;
+    flex-direction: column;
+    /* margin-left: 300px; */
 }
 
 a {
