--- a/front-end/src/app/features/home-module/user-profile/profile/profile.component.html
+++ b/front-end/src/app/features/home-module/user-profile/profile/profile.component.html
@@ -4,10 +4,9 @@
             <img class="rounded-circle" (click)="viewingProfile()" src="{{item.profilePic}}" alt="">
         </div>
         <div class="userDetails">
-            <div class="user-values d-flex align-items-start justify-content-between">
-                <p><span style="font-weight: bold;">{{item.fullname}}</span></p>
+            <div class="user-values d-flex align-items-start ">
+                <p class="me-5"><span style="font-weight: bold;">{{item.fullname}}</span></p>
                 <button (click)="editProfile()">Edit Profile</button>
-                <button>View Archive</button>
             </div>
             <div class="user-status d-flex align-items-start justify-content-between">
                 <p><span style="font-weight: bold;">{{userPosts.length}}</span> post</p>
