--- a/front-end/src/app/features/home-module/user-profile/search-users/search-users.component.css
+++ b/front-end/src/app/features/home-module/user-profile/search-users/search-users.component.css
@@ -1,21 +1,47 @@
-.slide-in {
-    position: fixed;
-    top: 0;
-    left: -100%;
-    /* Initially off-screen */
-    transition: left 0.5s ease-in-out;
-    /* Add smooth transition effect */
-    width: 300px;
-    /* Adjust as needed */
-    height: 100%;
-    /* Adjust as needed */
-    background-color: white;
-    /* Adjust as needed */
-    z-index: 999;
-    /* Ensure it's above other content */
+main {
+    background-color: #ffffff;
+    /* Background color */
+    border-radius: 10px;
+    /* Rounded corners */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    /* Box shadow */
 }
 
-.slide-in.visible {
-    left: 0;
-    /* Slide in from the left */
+.search-container {
+    width: 100%;
+    max-width: 500px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+/* Styling for the search input field */
+.search-container input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid #ccc;
+    border-radius: 20px;
+    outline: none;
+    font-size: 16px;
+}
+
+/* Styling for the search results */
+.search-results {
+    list-style: none;
+    padding: 0;
+    margin: 20px auto;
+    min-width: 700px;
+    min-height: 400px;
+    text-align: center;
+}
+
+.search-results li {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    text-align: center;
+    cursor: pointer;
+    line-height: 10px;
+}
+
+.search-results li:hover {
+    background-color: #f0f0f0;
 }
