--- a/front-end/src/app/features/home-module/viewpost/viewpost.component.css
+++ b/front-end/src/app/features/home-module/viewpost/viewpost.component.css
@@ -3,10 +3,12 @@
     /* margin-left: -100px; */
     flex-direction: column;
     align-items: center;
+    padding: 15px;
 }
 
 .main {
-    width: 600px;
+    /* width: 600px; */
+    max-width: 600px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -16,10 +18,19 @@
     font-weight: 500;
 }
 
-.viewComment{
+.viewComment {
     color: grey;
     font-weight: 400;
     font-size: 14px;
+}
+
+.postMain {
+    background-color: #ffffff;
+    /* Background color */
+    border-radius: 10px;
+    padding: 4px;
+    /* Rounded corners */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
 
 .postCaption {
@@ -41,7 +52,7 @@
 
 .post {
     /* height: 600px; */
-    width: 596px;
+    /* width: 596px; */
     object-fit: cover;
     border-radius: 5px;
     overflow: hidden;
@@ -55,7 +66,7 @@
     border: none;
     flex: 1;
     /* width: 600px; */
-    padding: 5px 0px;
+    padding: 5px 9px;
     font-weight: 300;
 }
 
