--- a/front-end/src/app/shared/nav-bar/nav-bar.component.css
+++ b/front-end/src/app/shared/nav-bar/nav-bar.component.css
@@ -1,37 +1,41 @@
 /* Sidebar */
 .sidebar {
-position: fixed;
-top: 0;
-bottom: 0;
-left: 0;
-padding: 58px 0 0; /* Height of navbar */
-box-shadow: 0 2px 5px 0 rgb(94, 94, 94), 0 2px 10px 0 rgba(255, 207, 207, 0.05);
-width: 240px;
-z-index: 600;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    padding: 58px 0 0;
+    /* Height of navbar */
+    box-shadow: 0 2px 5px 0 rgb(94, 94, 94), 0 2px 10px 0 rgba(255, 207, 207, 0.05);
+    width: 240px;
+    z-index: 600;
 }
 
 a:hover {
     cursor: pointer;
 }
-/*     
+
 @media (max-width: 991.98px) {
-.sidebar {
-width: 100%;
+    .sidebar {
+        width: 100%;
+    }
 }
-} */
+
 .sidebar .active {
-border-radius: 5px;
-box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+    border-radius: 5px;
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
 }
 
 .sidebar-sticky {
-position: relative;
-top: 0;
-height: calc(100vh - 48px);
-padding-top: 0.5rem;
-overflow-x: hidden;
-overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    position: relative;
+    top: 0;
+    height: calc(100vh - 48px);
+    padding-top: 0.5rem;
+    overflow-x: hidden;
+    overflow-y: auto;
+    /* Scrollable contents if viewport is shorter than content. */
 }
+
 /* .nav-options {
 
 }
@@ -43,18 +47,25 @@ overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 .slide-in {
     position: fixed;
     top: 0;
-    left: -100%; /* Initially off-screen */
-    transition: left 0.5s ease-in-out; /* Add smooth transition effect */
-    width: 300px; /* Adjust as needed */
-    height: 100%; /* Adjust as needed */
-    background-color: white; /* Adjust as needed */
-    z-index: 999; /* Ensure it's above other content */
+    left: -100%;
+    /* Initially off-screen */
+    transition: left 0.5s ease-in-out;
+    /* Add smooth transition effect */
+    width: 300px;
+    /* Adjust as needed */
+    height: 100%;
+    /* Adjust as needed */
+    background-color: white;
+    /* Adjust as needed */
+    z-index: 999;
+    /* Ensure it's above other content */
 }
 
-    .slide-in.visible {
-    left: 90px; /* Slide in from the left */
-    }
+.slide-in.visible {
+    left: 90px;
+    /* Slide in from the left */
+}
 
-    .nav-options.visible {
-        background-color: lightblue;
-    }
+.nav-options.visible {
+    background-color: lightblue;
+}
