--- a/front-end/src/app/shared/notification/notification.component.css
+++ b/front-end/src/app/shared/notification/notification.component.css
@@ -34,8 +34,9 @@ main {
     padding: 2px 10px;
 }
 
-.buttons button:hover {
-    background-color: rgb(200, 200, 200);
+.buttons p {
+    font-size: 15px;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 600px) {
