--- a/front-end/src/app/shared/post-viewing/post-viewing.component.html
+++ b/front-end/src/app/shared/post-viewing/post-viewing.component.html
@@ -8,7 +8,7 @@
                 <img class="rounded-circle me-3" [src]="userPofilePic" alt="">
                 <p class="mt-3">{{userName}}</p>
             </div>
-            <div class="options">
+            <div class="options" *ngIf="userPostEditbtn">
                 <img src="../../../../assets/post/3-dots.png" style="width: 15px;" (click)="postEdit()" role="button" alt="">
             </div>
         </div>
