--- a/front-end/src/app/shared/notification/notification.component.html
+++ b/front-end/src/app/shared/notification/notification.component.html
@@ -1,4 +1,4 @@
-<main>
+<main [@fadeInOut]>
     <div class="container">
         <div class="notification" *ngFor="let item of allusers">
             <img [src]="item.profilePic" alt="Profile Picture">
