--- a/front-end/src/app/features/home-module/other-user/other-user-profile/other-user-profile.component.css
+++ b/front-end/src/app/features/home-module/other-user/other-user-profile/other-user-profile.component.css
@@ -3,7 +3,8 @@ main {
     font-weight: 300;
     font-style: normal;
     max-width: 900px;
-    
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif !important;
+
 }
 
 .profile {
