--- a/front-end/src/app/features/home-module/user-profile/profile/profile.component.css
+++ b/front-end/src/app/features/home-module/user-profile/profile/profile.component.css
@@ -5,7 +5,8 @@ main {
     max-width: 900px;
     display: flex;
     flex-direction: column;
-    /* margin-left: 300px; */
+    /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif; */
+
 }
 
 a {
@@ -42,15 +43,26 @@ a {
     /* background-color: lightcoral; */
 }
 
-.userDetails button {
-    background-color: rgb(234, 234, 234);
+.edit-profile-button {
+    background-color: #007bff;
+    color: #fff;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     border: none;
-    border-radius: 5px;
     padding: 2px 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.userDetails button:hover {
-    background-color: rgb(200, 200, 200);
+.edit-profile-button:hover {
+    background-color: #0056b3;
+}
+
+.edit-profile-button:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.5);
 }
 
 .user-values,
