--- a/front-end/src/app/features/home-module/viewpost/viewpost.component.css
+++ b/front-end/src/app/features/home-module/viewpost/viewpost.component.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     align-items: center;
     padding: 15px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif !important;
+
 }
 
 .main {
