--- a/front-end/src/app/features/home-module/viewpost/viewpost.component.html
+++ b/front-end/src/app/features/home-module/viewpost/viewpost.component.html
@@ -18,7 +18,7 @@
                 <div class="postlike d-flex align-items-center justify-content-between mt-2" style="width: 110px;">
                     <div class="like">
                         <button (click)="likeBtn(item._id,item.postedBy._id)">
-                            <span [ngClass]="{'liked': item.postedBy._id === 'userId' }" class="like-icon"></span>
+                            <span [ngClass]="{'liked': item.likes.includes(userId)}" class="like-icon"></span>
                             <!-- <span class="like-icon"></span> -->
                         </button>
                     </div>
