--- a/front-end/src/app/features/home-module/post/add-post/add-post.component.css
+++ b/front-end/src/app/features/home-module/post/add-post/add-post.component.css
@@ -50,6 +50,11 @@ img {
     text-align: center;
 }
 
+.postImg img {
+    width: 100%;
+    height: 90%;
+}
+
 .postImg button {
     background-color: white;
     border: none;
