--- a/front-end/src/app/features/home-module/post/add-post/add-post.component.html
+++ b/front-end/src/app/features/home-module/post/add-post/add-post.component.html
@@ -17,11 +17,11 @@
 </div>
 
     <div class="postImg" *ngIf="postImg">
-        <div class="nextBtn">
+        <div class="nextBtn mb-3">
             <button (click)="next()">Next</button>
         </div>
         <div class="postingImg">
-            <img [src]="selectedImage" width="100%" alt="">
+            <img [src]="selectedImage" alt="">
         </div>
     </div>
 
