--- a/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.html
+++ b/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.html
@@ -37,4 +37,5 @@
         </div>
     </form>
     <button class="mt-3 btn btn-primary" (click)="submit()">Submit</button>
+    <a (click)="changePassword()" class="mt-2">Change Password</a>
 </main>
