--- a/front-end/src/app/shared/follow-unfollow-list/follow-unfollow-list.component.html
+++ b/front-end/src/app/shared/follow-unfollow-list/follow-unfollow-list.component.html
@@ -2,6 +2,7 @@
     <div class="head mt-1">
         <h6 *ngIf="followerHeading">Followers</h6>
         <h6 *ngIf="followingHeading">Following</h6>
+        <h6 *ngIf="likeHeading">Likes</h6>
     </div>
     <!-- <input class="mt-2" type="text" [(ngModel)]="searchValue" placeholder="Search" (input)="searchOperation()"> -->
     <div class="top pe-2 mt-4">
