--- a/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.html
+++ b/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.html
@@ -24,7 +24,7 @@
         </div>
         <div class="website">
             <h6 class="mt-3 mb-3 heading">Username</h6>
-            <input type="text" name="username" ngModel>
+            <input type="text" value="sjdhjshdjh" placeholder="{{userName}}" name="username" ngModel>
         </div>
         <div class="website">
             <h6 class="mt-3 mb-3 heading">Bio</h6>
