--- a/front-end/src/app/features/home-module/story/story.component.html
+++ b/front-end/src/app/features/home-module/story/story.component.html
@@ -1,17 +1,16 @@
-<div class="stories">
-    <div *ngIf="!fetched" class="story-loader">
-        <img alt="Loading..." src="/assets/img/loader.gif" height="32" width="32" />
-    </div>
-    <div *ngIf="fetched" class="story-inner">
-        <div class="story-inner-inner">
-            <app-story-icon *ngFor="let story of storiess; let i = index" [ngStyle]="styleTransform[i]"
-                [index]="i" [story]="story"></app-story-icon>
+<main>
+    <div class="story-top d-flex">
+        <div class="stories d-flex flex-column align-items-center justify-content-center me-3">
+            <img src="../../../../assets/photo-1633886897663-44c707d71904.jpg" width="60px" alt="story-img" class="rounded-circle">
+            <p>userName</p>
+        </div>
+        <div class="stories d-flex flex-column align-items-center justify-content-center">
+            <img src="../../../../assets/photo-1633886897663-44c707d71904.jpg" width="60px" alt="story-img" class="rounded-circle">
+            <p>userName</p>
+        </div>
+        <div class="stories d-flex flex-column align-items-center justify-content-center">
+            <img src="../../../../assets/photo-1633886897663-44c707d71904.jpg" width="60px" alt="story-img" class="rounded-circle">
+            <p>userName</p>
         </div>
     </div>
-    <div *ngIf="storyIndex > 3" class="slide-arrow slide-arrow-left" (click)="clickPrevStory()">
-        <div class="slide-arrow-icon slide-arrow-icon-left"></div>
-    </div>
-    <div *ngIf="stories.length > storyIndex + 7" class="slide-arrow slide-arrow-right" (click)="clickNextStory()">
-        <div class="slide-arrow-icon slide-arrow-icon-right"></div>
-    </div>
-</div>
+</main>
