--- a/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.html
+++ b/front-end/src/app/features/home-module/user-profile/user-edit-profile/user-edit-profile.component.html
@@ -2,16 +2,16 @@
     <div class="mb-4 heading">
         <h4>Edit profile</h4>
     </div>
-    <form action="" #profileEdit="ngForm">
+    <form action="" #profileEdit="ngForm" *ngFor="let item of userprofileDetials">
         <div class="profileImg">
             <div class="image d-flex align-items-center ">
                 <div class="img me-4">
                     <!-- <img class="rounded-circle" src="../../../../../assets/auth/124010.webp" alt=""> -->
-                    <img class="rounded-circle" src="{{profileImg}}" alt="">
+                    <img class="rounded-circle" src="{{item.profilePic}}" alt="">
                 </div>
-                <div class="username" style="line-height: 2px;">
-                    <p>{{fullName}}</p>
-                    <p>{{userName}}</p>
+                <div class="username mt-3" style="line-height: 2px;">
+                    <p>{{item.fullname}}</p>
+                    <p>{{item.username}}</p>
                 </div>
             </div>
             <div class="changeBtn">
@@ -20,19 +20,19 @@
         </div>
         <div class="website">
             <h6 class="mt-3 mb-3 heading">Name</h6>
-            <input type="text" name="fullname" ngModel>
+            <input type="text" name="fullname" [(ngModel)]="item.fullname">
         </div>
         <div class="website">
             <h6 class="mt-3 mb-3 heading">Username</h6>
-            <input type="text" value="sjdhjshdjh" placeholder="{{userName}}" name="username" ngModel>
+            <input type="text" value="sjdhjshdjh" [(ngModel)]="item.username"  name="username" ngModel>
         </div>
         <div class="website">
             <h6 class="mt-3 mb-3 heading">Bio</h6>
-            <input type="text" placeholder="{{userBio}}" name="bio" ngModel>
+            <input type="text" [(ngModel)]="item.bio" name="bio" ngModel>
         </div>
         <div class="website d-flex flex-column align-items-start" >
             <h6 class="mt-3 mb-3 heading">Gender</h6>
-            <input type="text" placeholder="{{gender}}" value="{{gender}}" name="gender" ngModel>
+            <input type="text" placeholder="{{gender}}" [(ngModel)]="item.gender" name="gender" ngModel>
             <small class="mt-1" style="font-size: 12px;">This won’t be part of your public profile.</small>
         </div>
     </form>
