--- a/front-end/src/app/features/home-module/viewpost/viewpost.component.css
+++ b/front-end/src/app/features/home-module/viewpost/viewpost.component.css
@@ -1,8 +1,8 @@
 .top {
     display: flex;
     /* margin-left: -100px; */
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    /* align-items: start; */
     padding: 15px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif !important;
 
@@ -95,7 +95,8 @@
 
 .comment-icon,
 .share-icon,
-.like-icon {
+.like-icon,
+.liked {
     width: 22px;
     height: 22px;
     display: inline-block;
@@ -123,4 +124,9 @@ a {
 button {
     border: none;
     background-color: white;
+}
+
+.user-suggessions {
+    position: absolute;
+    right: 90px;
 }
