--- a/front-end/src/app/features/home-module/viewpost/viewpost.component.html
+++ b/front-end/src/app/features/home-module/viewpost/viewpost.component.html
@@ -20,8 +20,7 @@
                 <div class="postlike d-flex align-items-center justify-content-between mt-2" style="width: 110px;">
                     <div class="like">
                         <button (click)="likeBtn(item._id,item.postedBy._id)">
-                            <!-- <span class="liked"></span> -->
-                            <span class="like-icon"></span>
+                            <span [ngClass]=" {'liked' : item.likes.includes(userId),'like-icon' : !item.likes.includes(userId)}"></span>
                         </button>
                     </div>
                     <div class="comments">
@@ -46,7 +45,6 @@
                         all {{item.comments.length}} commment</a></div>
                 <div class="viewComment" *ngIf="item.comments.length === 1"><a
                         (click)="commentAndPostViewing(item._id)">View commment</a></div>
-                <!-- <p>{{item.postedBy._id}}</p> -->
                 <div class="addComment ">
                     <input type="text" placeholder="Add a comment" name="text" ngModel required>
                     <button *ngIf="addCommentForm.value.text" (click)="commentAdding(item._id)">Post</button>
@@ -54,4 +52,5 @@
             </div>
         </form>
     </div>
+    <app-right-side class="user-suggessions"></app-right-side>
 </div>
