--- a/front-end/src/app/features/auth-module/signup/signup.component.css
+++ b/front-end/src/app/features/auth-module/signup/signup.component.css
@@ -1,9 +1,8 @@
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+/* @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'; */
 
 .main {
     padding: 10px;
     margin-top: -70px;
-    /* margin-right: 160px; */
     border: 1px solid rgb(212, 212, 212);
     width: 400px;
     display: flex;
@@ -37,7 +36,6 @@ a {
 }
 
 .signup {
-    /* background-color: lightblue; */
     padding: 20px;
     margin-top: 10px;
     border: 1px solid rgb(212, 212, 212);
